--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
     font-family: Geneva, sans-serif;
   }
   
+  /* HEADER SECTION */
   #header {
     display: flex;
     margin: 0;
@@ -29,6 +30,7 @@
     place-self: center;
   }
   
+  /* NAVBAR SECTION */
   #nav-bar > ul {
     display: flex;
     flex-direction: row;
@@ -51,6 +53,7 @@
     color: #00A5E0;
   }
   
+  /* MAIN PAGE */
   #page-container {
     position: absolute;
     top: 120px;
@@ -95,7 +98,8 @@
   #submit:hover {
     cursor: pointer;
   }
-  
+
+  /* FEATURES */
   #features {
     padding: 40px 150px;
   }
@@ -124,6 +128,7 @@
     margin-left: 30px;
   }
   
+  /* SHOP PRODUCTS */
   #shop-products {
     display: flex;
     justify-content: space-evenly;
@@ -173,6 +178,7 @@
     font-weight: 600;
   }
   
+  /* FOOTER SECTION */
   footer {
     display: flex;
     flex-direction: column;
@@ -196,6 +202,7 @@
     padding-bottom: 20px;
   }
   
+  /* MEDIA QUERIES */
   @media only screen and (max-width: 800px) {
     #header-img {
       width: 40%;
